observability/mlflow/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  annotations:
    argocd.argoproj.io/sync-wave: "0"
