observability/mlflow/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mlflow
  namespace: observability
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mlflow.svc.k8s.monster.lab`)
      kind: Rule
      services:
        - name: mlflow
          port: 5000
  tls:
    secretName: monster-server-cert
    options:
      name: mtls-strict
      namespace: observability
